--- a/notebooks/read_turbidity_xlsx.ipynb
+++ b/notebooks/read_turbidity_xlsx.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import copy\n",
     "from datetime import datetime\n",
+    "import geopandas\n",
     "import json\n",
     "from pathlib import Path\n",
     "import pandas\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turbidity_shp_df = geopandas.read_file(\"data/field_work/shapefile/modified_intern_spatial_turbidity_2023.shp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +103,19 @@
     "        if all(pandas.isna(measurement_values)) is False:\n",
     "            loc_lon_lat_match = re.search(LOC_LON_LAT_REGEX, col)\n",
     "            location = loc_lon_lat_match.group(1)\n",
-    "            latitude = float(loc_lon_lat_match.group(2).replace(\"- \", \"-\"))\n",
-    "            longitude  = float(loc_lon_lat_match.group(3).replace(\"- \", \"-\"))\n",
+    "            global_location = df['Turbidity Measurement'][0]\n",
+    "            precise_location = location\n",
+    "            notes = f\"{df['Turbidity Measurement'][0]} {location}\"\n",
+    "            #latitude = float(loc_lon_lat_match.group(2).replace(\"- \", \"-\"))\n",
+    "            #longitude  = float(loc_lon_lat_match.group(3).replace(\"- \", \"-\"))\n",
+    "            latitude = turbidity_shp_df[turbidity_shp_df[\"location\"] == notes].geometry.values[0].y\n",
+    "            longitude = turbidity_shp_df[turbidity_shp_df[\"location\"] == notes].geometry.values[0].x\n",
     "            measurement_dict[\"geo_coordinates\"][\"lat\"] = latitude\n",
     "            measurement_dict[\"geo_coordinates\"][\"lon\"] = longitude\n",
     "            measurement_dict[\"time\"] = time\n",
-    "            measurement_dict[\"notes\"] = f\"{df['Turbidity Measurement'][0]} {location}\"\n",
+    "            measurement_dict[\"notes\"] = notes\n",
+    "            measurement_dict[\"global_location\"] = global_location\n",
+    "            measurement_dict[\"precise_location\"] = precise_location\n",
     "            measurement_dict[\"measures\"] = list(measurement_values)\n",
     "\n",
     "            measurements_list.append(measurement_dict)\n",
@@ -107,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +141,13 @@
     "    with open(Path(\"data/field_work/json/summer_2023\", f\"{estuary_name}.json\"), \"w\") as f:\n",
     "        json.dump(data_dict_list, f, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
